# FamilyHub

./: .gitignore  pyproject.toml
src/FamilyHub/: app.bat  app.py  service_account.json
src/FamilyHub/service/: cal_pdate.bat  cal_pdate.py
src/FamilyHub/static/photos/: IMG_0610.HEIC  IMG_3103.HEIC
src/FamilyHub/templates/: dashboard.html
